# ML-Maid

./: .gitignore  AGENTS.md  README.md  components.d.ts  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/ML-Maid-Docs/: README.md  README.zh-CN.md  package-lock.json  package.json
docs/ML-Maid-Docs/docs/: README.md  download.md
docs/ML-Maid-Docs/docs/.vuepress/: client.ts  collections.ts  config.ts  navbar.ts  plume.config.ts
docs/ML-Maid-Docs/docs/.vuepress/theme/components/: HomeLanding.vue  LatestReleaseDownloads.vue
docs/ML-Maid-Docs/docs/.vuepress/theme/styles/: custom.css
docs/ML-Maid-Docs/docs/developer-guide/: README.md  api-maintenance.md  architecture.md  backend.md  frontend.md  plugin-development.md  plugin-system.md  storage-release.md
docs/ML-Maid-Docs/docs/user-guide/: README.md  getting-started.md  launching.md  library.md  plugins.md  statistics-settings.md
docs/ML-Maid-Docs/docs/zh/: README.md  download.md
docs/ML-Maid-Docs/docs/zh/developer-guide/: README.md  api-maintenance.md  architecture.md  backend.md  frontend.md  plugin-development.md  plugin-system.md  storage-release.md
docs/ML-Maid-Docs/docs/zh/user-guide/: README.md  getting-started.md  launching.md  library.md  plugins.md  statistics-settings.md
docs/ReadMe/: README_zh-CN.md
electron/: electron-env.d.ts  main.ts  preload.ts
electron/constants/: procMonMode.ts
electron/database/: init.ts
electron/modules/: fileManager.ts  gameLauncher.ts  gameManager.ts  processMonitor.ts  protocolHandler.ts  settingsManager.ts  statsManager.ts  windowManager.ts
electron/types/: index.ts
electron/utils/: helpers.ts  i18n.ts  powershell.ts
scripts/: collect-artifacts.mjs
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_manager.rs  game_launcher.rs  game_manager.rs  lib.rs  main.rs  paths.rs  plugins.rs  process_monitor.rs  settings.rs  stats_manager.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src/api/: electron.ts  format.ts  index.ts  tauri.ts
src/assets/echarts/: dark-theme.ts  palette.ts
src/components/: FilterDialog.vue  GameAddForm.vue  GameEditForm.vue  GameFormModals.vue  ImageCropperModal.vue  ImageUrlDialog.vue  MainAeraGameInfo.vue  ScraperModal.vue  Settings.vue  SideBarGameList.vue  SideBarNav.vue  SortDialog.vue  Statistics.vue
src/composables/: useAppearance.ts  useTheme.ts
src/constants/: procMonMode.ts
src/locales/: en-US.json  ja-JP.json  zh-CN.json
src/plugins/: apply.ts  bootstrap.ts  manager.ts  types.ts
src/router/: index.ts
src/stores/: game.ts  modal.ts  page.ts  plugins.ts  settings.ts
src/styles/: base.css  dark-theme.css  game-form.css
src/types/: global.d.ts
src/utils/: sanitizeHtml.ts
src/views/: AddView.vue  EditView.vue  MainView.vue
