[package]
name = "ml-maid"
version = "0.4.0"
description = "A Visual Novel Manager"
authors = ["Kurosu-Ti01"]
edition = "2021"

[lib]
name = "ml_maid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[profile.release]
strip = true
lto = true
