[package]
name = "ml-maid"
version = "0.5.0"
description = "A Visual Novel Manager"
authors = ["Kurosu-Ti01"]
edition = "2021"

[lib]
name = "ml_maid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
# The MSVC linker prints an informational "Creating library ... and object ..."
# message to stdout when building the cdylib's import library; Rust >= 1.83
# surfaces any linker output as a `linker_messages` warning. It is benign.
linker_messages = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
# Decoders cover every image extension the picker filter allows; jpeg/png
# double as the crop output encoders
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico"] }
# HTTP proxy for scraper plugins + remote image download (rustls avoids openssl)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
] }

[profile.release]
strip = true
lto = true
